Add Datawallet (DXT) Add Storiqa (STQ)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,9 @@
         <item>DOGE</item>
         <item>HBZ</item>
         <item>EOS</item>
+        <item>XLM</item>
+        <item>BTCZ</item>
+        <item>DXT</item>
+        <item>STQ</item>
     </string-array>
 </resources>
